Put margin on grid to prevent overlap from footer

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -111,6 +111,7 @@ body {
     grid-template: 19% 25% 3% 25% 3% 25% / 20% 80%;
     grid-row-gap: 10px;
     margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .accolades-text {
